// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component H4 Snapshot added optional style inline prop 1`] = `
<h4
  className="jsx-1352789389"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  Heading 1
</h4>
`;

exports[`Component H4 Snapshot primary color of the theme 1`] = `
<h4
  className="jsx-2701408071"
  style={Object {}}
>
  Heading 4
</h4>
`;

exports[`Component H4 Snapshot secondary font-family of the theme 1`] = `
<h4
  className="jsx-150344464"
  style={Object {}}
>
  Heading 4
</h4>
`;

exports[`Component H4 Snapshot without arguments, take the default values 1`] = `
<h4
  className="jsx-1352789389"
  style={Object {}}
>
  Heading 4
</h4>
`;
